# stripenn

./: .gitignore  PKG-INFO  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  testrun.sh
Stripenn_result/B-cell_10kb_resolution_72hrs/: result_filtered.txt  result_unfiltered.txt
Stripenn_result/B-cell_5kb_resolution_30hrs/: result_filtered.txt  result_unfiltered.txt
Stripenn_result/T-cell_10kb_resolution_BL6/: result_filtered.txt  result_unfiltered.txt
Stripenn_result/T-cell_10kb_resolution_NOD/: result_filtered.txt  result_unfiltered.txt
Stripenn_result/T-cell_5kb_resolution_BL6/: result_filtered.txt  result_unfiltered.txt
Stripenn_result/T-cell_5kb_resolution_NOD/: result_filtered.txt  result_unfiltered.txt
Stripenn_result/microC_HFF_5kb_resolution/: result_filtered.txt  result_unfiltered.txt
src/: cli.py  coolprocess.py  getStripe.py  score.py  seeimage.py  stats.py  stripenn.py
src/stripenn/: ImageProcessing.py  cli.py  getStripe.py  observed_over_expected.py  score.py  seeimage.py  stats.py  stripenn.py
src/stripenn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
stripenn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  setup.py
stripenn.egg-info/src/: score.py
tests/stripenn/: getStripe.py
tests/stripenn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
