# Copyright (C) 2022 Roberto Rossini <roberros@uio.no>
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=45", "setuptools-scm>=7.0", "wheel", "python>=3.7"]
build-backend = "setuptools.build_meta"

[project]

name = "stripenn"
version = "1.1.65.20"
description = "Image-processing based detection of architectural stripes from chromatin conformation data"
authors = [
    { name = "Sora Yoon", email = "sora.yoon@pennmedicine.upenn.edu" },
]
readme = "README.rst"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "cooler",
    "joblib",
    "numpy",
    "matplotlib",
    "opencv-python",
    "pandas",
    "scikit-image",
    "scipy",
    "tqdm",
    "typer"]

[tool.poetry.dependencies]
typer = "*"
cooler = "*"
joblib = "*"
numpy = "*"
matplotlib = "*"
tqdm = "*"
opencv-python = "*"
pandas = "*"
scikit-image = "*"
scipy = "*"


[project.optional-dependencies]
test = ["pytest>=5.2"]

[tool.setuptools]
package-dir = {"stripenn" = "src/stripenn"}

[tool.poetry.scripts]
stripenn = "stripenn.cli:main"

[tool.poetry]
name = "stripenn"
version = "1.1.65.20"
description = "Image-processing based detection of architectural stripes from chromatin conformation data"
authors = ["Sora Yoon <sora.yoon@pennmedicine.upenn.edu>"]
